--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -4,84 +4,198 @@
  */
 
 /* Slidebar widths for browsers/devices that don't support media queries. */
-	.sb-slidebar {
+	.sb-width-default.sb-location-left,
+	.sb-width-default.sb-location-right {
 		width: 30%;
 	}
 	
-	.sb-width-thin {
+	.sb-width-thin.sb-location-left,
+	.sb-width-thin.sb-location-right {
 		width: 15%;
 	}
 	
-	.sb-width-wide {
+	.sb-width-wide.sb-location-left,
+	.sb-width-wide.sb-location-right {
 		width: 45%;
 	}
 
+	.sb-width-default.sb-location-top,
+	.sb-width-default.sb-location-bottom {
+		height: 30%;
+	}
+	
+	.sb-width-thin.sb-location-top,
+	.sb-width-thin.sb-location-bottom {
+		height: 15%;
+	}
+	
+	.sb-width-wide.sb-location-top,
+	.sb-width-wide.sb-location-bottom {
+		height: 45%;
+	}
+
 @media (max-width: 480px) { /* Slidebar widths on extra small screens. */
-	.sb-slidebar {
+
+	.sb-width-default.sb-location-left,
+	.sb-width-default.sb-location-right {
 		width: 70%;
 	}
 	
-	.sb-width-thin {
+	.sb-width-thin.sb-location-left,
+	.sb-width-thin.sb-location-right {
 		width: 55%;
 	}
 	
-	.sb-width-wide {
+	.sb-width-wide.sb-location-left,
+	.sb-width-wide.sb-location-right {
 		width: 85%;
+	}
+
+	.sb-width-default.sb-location-top,
+	.sb-width-default.sb-location-bottom {
+		height: 70%;
+	}
+	
+	.sb-width-thin.sb-location-top,
+	.sb-width-thin.sb-location-bottom {
+		height: 55%;
+	}
+	
+	.sb-width-wide.sb-location-top,
+	.sb-width-wide.sb-location-bottom {
+		height: 85%;
 	}
 }
 
 @media (min-width: 481px) { /* Slidebar widths on small screens. */
-	.sb-slidebar {
+
+	.sb-width-default.sb-location-left,
+	.sb-width-default.sb-location-right {
 		width: 55%;
 	}
 	
-	.sb-width-thin {
+	.sb-width-thin.sb-location-left,
+	.sb-width-thin.sb-location-right {
 		width: 40%;
 	}
 	
-	.sb-width-wide {
+	.sb-width-wide.sb-location-left,
+	.sb-width-wide.sb-location-right {
 		width: 70%;
+	}
+
+	.sb-width-default.sb-location-top,
+	.sb-width-default.sb-location-bottom {
+		height: 55%;
+	}
+	
+	.sb-width-thin.sb-location-top,
+	.sb-width-thin.sb-location-bottom {
+		height: 40%;
+	}
+	
+	.sb-width-wide.sb-location-top,
+	.sb-width-wide.sb-location-bottom {
+		height: 70%;
 	}
 }
 
 @media (min-width: 768px) { /* Slidebar widths on medium screens. */
-	.sb-slidebar {
+
+	.sb-width-default.sb-location-left,
+	.sb-width-default.sb-location-right {
 		width: 40%;
 	}
 	
-	.sb-width-thin {
+	.sb-width-thin.sb-location-left,
+	.sb-width-thin.sb-location-right {
 		width: 25%;
 	}
 	
-	.sb-width-wide {
+	.sb-width-wide.sb-location-left,
+	.sb-width-wide.sb-location-right {
 		width: 55%;
+	}
+
+	.sb-width-default.sb-location-top,
+	.sb-width-default.sb-location-bottom {
+		height: 40%;
+	}
+	
+	.sb-width-thin.sb-location-top,
+	.sb-width-thin.sb-location-bottom {
+		height: 25%;
+	}
+	
+	.sb-width-wide.sb-location-top,
+	.sb-width-wide.sb-location-bottom {
+		height: 55%;
 	}
 }
 
 @media (min-width: 992px) { /* Slidebar widths on large screens. */
-	.sb-slidebar {
+
+	.sb-width-default.sb-location-left,
+	.sb-width-default.sb-location-right {
 		width: 30%;
 	}
 	
-	.sb-width-thin {
+	.sb-width-thin.sb-location-left,
+	.sb-width-thin.sb-location-right {
 		width: 15%;
 	}
 	
-	.sb-width-wide {
+	.sb-width-wide.sb-location-left,
+	.sb-width-wide.sb-location-right {
 		width: 45%;
+	}
+
+	.sb-width-default.sb-location-top,
+	.sb-width-default.sb-location-bottom {
+		height: 30%;
+	}
+	
+	.sb-width-thin.sb-location-top,
+	.sb-width-thin.sb-location-bottom {
+		height: 15%;
+	}
+	
+	.sb-width-wide.sb-location-top,
+	.sb-width-wide.sb-location-bottom {
+		height: 45%;
 	}
 }
 
 @media (min-width: 1200px) { /* Slidebar widths on extra large screens. */
-	.sb-slidebar {
+
+	.sb-width-default.sb-location-left,
+	.sb-width-default.sb-location-right {
 		width: 20%;
 	}
 	
-	.sb-width-thin {
+	.sb-width-thin.sb-location-left,
+	.sb-width-thin.sb-location-right {
 		width: 5%;
 	}
 	
-	.sb-width-wide {
+	.sb-width-wide.sb-location-left,
+	.sb-width-wide.sb-location-right {
 		width: 35%;
+	}
+
+
+	.sb-width-default.sb-location-top,
+	.sb-width-default.sb-location-bottom {
+		height: 20%;
+	}
+	
+	.sb-width-thin.sb-location-top,
+	.sb-width-thin.sb-location-bottom {
+		height: 5%;
+	}
+	
+	.sb-width-wide.sb-location-top,
+	.sb-width-wide.sb-location-bottom {
+		height: 35%;
 	}
 }
