--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -1,3 +1,10 @@
+/**
+ * Off-Canvas Sidebars plugin
+ *
+ * @author Jory Hogeveen <info@keraweb.nl>
+ * @package off-canvas-sidebars
+ * @version 0.2.0
+ */
 
 /**
  * Sidebar Widths (patched from older version of Slidebars)
