--- a/css/off-canvas-sidebars-admin.css
+++ b/css/off-canvas-sidebars-admin.css
@@ -10,7 +10,7 @@
 	overflow: hidden;
     background: #fff;
     position: relative;
-    margin: 20px 0;
+    margin: 0;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
 }
 
@@ -23,7 +23,7 @@
 	-o-transition: all .1s;
 	transition: all .1s;
 }
-.postbox.section-sidebar:hover {opacity: 1 !important;}
+.postbox.section-sidebar:hover { opacity: 1 !important; }
 
 @media only screen and (min-width: 850px) {
 	.off-canvas-sidebars-settings {
@@ -38,7 +38,7 @@
 
 	.ocs-credits {
 		float: right;
-    	margin: 20px -300px 20px 20px;
+    	margin: 10px -300px 10px 20px;
 	    width: 280px;
 	}
 }
@@ -47,6 +47,6 @@
 	.ocs-credits {
 		position: fixed;
 	    right: 0;
-	    margin: 20px;
+	    margin: 10px 20px;
 	}
 }
