First try to fix issues with smoothscroll and mobile browsers
- See https://github.com/adchsm/Slidebars/pull/257
- See
https://www.adchsm.com/slidebars/help/advanced-usage/scrolling-the-html-or-body-elements/
- See
https://wordpress.org/support/topic/conflict-with-off-canvas-sidebars/
- Addresses scroll lock aswell

--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -3,8 +3,27 @@
  *
  * @author Jory Hogeveen <info@keraweb.nl>
  * @package off-canvas-sidebars
- * @version 0.3
+ * @version 0.3.2
  */
+
+/**
+ * Slidebar CSS overwrites
+ */
+
+html,
+.ocs-initialized html {
+	overflow-y: auto;
+	height: auto;
+}
+[canvas=container],
+.ocs-initialized [canvas=container] {
+	overflow-y: hidden;
+	height: auto;
+}
+
+html.ocs-scroll-lock {
+	overflow-y: hidden;
+}
 
 /**
  * Sidebar Widths (patched from older version of Slidebars)
