--- a/css/off-canvas-sidebars-admin.css
+++ b/css/off-canvas-sidebars-admin.css
@@ -27,6 +27,11 @@
 }
 .postbox.section-sidebar:hover { opacity: 1 !important; }
 
+.off-canvas-sidebars-settings fieldset.radio label,
+.off-canvas-sidebars-settings fieldset.checkbox label { display: block }
+
+.off-canvas-sidebars-settings input + select { vertical-align: top; }
+
 @media only screen and (min-width: 850px) {
 	.off-canvas-sidebars-settings {
 		margin-right: 300px;
