--- a/css/off-canvas-sidebars-admin.css
+++ b/css/off-canvas-sidebars-admin.css
@@ -3,7 +3,7 @@
  *
  * @author Jory Hogeveen <info@keraweb.nl>
  * @package off-canvas-sidebars
- * @version 0.3
+ * @version 0.4
  */
 
 .ocs-credits {
@@ -29,6 +29,8 @@
 
 .off-canvas-sidebars-settings fieldset.radio label,
 .off-canvas-sidebars-settings fieldset.checkbox label { display: block }
+.off-canvas-sidebars-settings fieldset.radio label + br {display: none;}
+.off-canvas-sidebars-settings fieldset.radio label + .description {margin-bottom: .5em; display: inline-block;}
 
 .off-canvas-sidebars-settings input + select { vertical-align: top; }
 
