Enhance settings JS + fix docs

--- a/slidebars/slidebars.css
+++ b/slidebars/slidebars.css
@@ -8,6 +8,12 @@
  * License url: http://www.adchsm.com/slidebars/license/
  */
 
+/*!
+ * Modified by: Jory Hogeveen
+ *
+ * @since  0.4  Enhance location selectors, added quotes.
+ */
+
 /**
  * Box Model, Html & Body
  */
