Minify and docs

--- a/css/off-canvas-sidebars-admin.css
+++ b/css/off-canvas-sidebars-admin.css
@@ -1,9 +1,10 @@
-/**
+/*!
  * Off-Canvas Sidebars plugin
  *
  * @author Jory Hogeveen <info@keraweb.nl>
  * @package off-canvas-sidebars
  * @version 0.4
+ * @preserve
  */
 
 .ocs-credits {
