--- a/slidebars/slidebars.css
+++ b/slidebars/slidebars.css
@@ -6,10 +6,9 @@
  * Author url: http://www.adchsm.com/
  * License: MIT
  * License url: http://www.adchsm.com/slidebars/license/
- */
-
-/*!
+ *
  * Modified by: Jory Hogeveen
+ * Version numbers below are related to Off-Canvas Sidebars, not Slidebars.
  *
  * @since  0.4  Enhance location selectors, added quotes.
  */
