--- a/css/off-canvas-sidebars-admin.css
+++ b/css/off-canvas-sidebars-admin.css
@@ -28,10 +28,13 @@
 }
 .postbox.section-sidebar:hover { opacity: 1 !important; }
 
+.off-canvas-sidebars-settings .form-table tbody > tr:not(:last-child) { border-bottom: 1px solid #eee; }
+.off-canvas-sidebars-settings .form-table:not(:last-child) { margin-bottom: 1em; border-bottom: 1px solid #eee; }
+
 .off-canvas-sidebars-settings fieldset.radio label,
 .off-canvas-sidebars-settings fieldset.checkbox label { display: block }
-.off-canvas-sidebars-settings fieldset.radio label + br {display: none;}
-.off-canvas-sidebars-settings fieldset.radio label + .description {margin-bottom: .5em; display: inline-block;}
+.off-canvas-sidebars-settings fieldset.radio label + br { display: none; }
+.off-canvas-sidebars-settings fieldset.radio label + .description { margin-bottom: .5em; display: inline-block; }
 
 .off-canvas-sidebars-settings input + select { vertical-align: top; }
 
@@ -58,7 +61,7 @@
 		margin-left: 0.5%;
 		box-sizing: border-box;
 	}
-	.off-canvas-sidebars-settings .postbox-container .postbox-third.first { margin-left: 0;}
+	.off-canvas-sidebars-settings .postbox-container .postbox-third.first { margin-left: 0; }
 }
 
 @media only screen and (min-width: 959px) {
