Use CSS for disable scroll function: #39

--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -22,6 +22,9 @@ html.ocs-initialized {
 	overflow-y: hidden;
 	height: auto;
 }
+html.ocs-scroll-lock {
+	overflow-y: hidden;
+}
 
 
 /*[canvas-fixed] {
