Assets version tag 0.4.1 + minified files

--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -3,7 +3,8 @@
  *
  * @author Jory Hogeveen <info@keraweb.nl>
  * @package off-canvas-sidebars
- * @version 0.4
+ * @since   0.2
+ * @version 0.4.1
  * @preserve
  */
 
