File codeblocks + comments + versions

--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -2,9 +2,9 @@
  * Off-Canvas Sidebars plugin
  *
  * @author  Jory Hogeveen <info@keraweb.nl>
- * @package off-canvas-sidebars
+ * @package Off_Canvas_Sidebars
  * @since   0.2
- * @version 0.4.2
+ * @version 0.5
  * @preserve
  */
 
