--- a/css/off-canvas-sidebars-admin.css
+++ b/css/off-canvas-sidebars-admin.css
@@ -40,6 +40,9 @@
 .off-canvas-sidebars-settings input + select { vertical-align: top; }
 .off-canvas-sidebars-settings .form-table code { display: inline-block; }
 
+.off-canvas-sidebars-settings .icon { font-size: 1.3em; vertical-align: middle; text-decoration: none; }
+.off-canvas-sidebars-settings .icon:first-child {margin-right: 5px;}
+
 @media only screen and (min-width: 850px) {
 	.off-canvas-sidebars-settings {
 		margin-right: 300px;
