--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -4,7 +4,7 @@
  * @author  Jory Hogeveen <info@keraweb.nl>
  * @package Off_Canvas_Sidebars
  * @since   0.2.0
- * @version 0.5.0
+ * @version 0.5.4
  * @preserve
  */
 
@@ -32,6 +32,7 @@ html.ocs-scroll-lock.ocs-scroll-fixed body {
 .ocs-initialized [canvas=container] {
 	overflow-y: hidden;
 	height: auto;
+	min-height: 100vh;
 }
 
 
