Add resize animation styles

--- a/css/off-canvas-sidebars.css
+++ b/css/off-canvas-sidebars.css
@@ -63,7 +63,11 @@ html.ocs-scroll-lock.ocs-scroll-fixed body {
 [off-canvas*=" top"][off-canvas*=" reveal"],
 [off-canvas*=" top"][off-canvas*=" shift"],
 [off-canvas*=" bottom"][off-canvas*=" reveal"],
-[off-canvas*=" bottom"][off-canvas*=" shift"] {
+[off-canvas*=" bottom"][off-canvas*=" shift"],
+[off-canvas*=" top"][off-canvas*=" resize_reveal"],
+[off-canvas*=" top"][off-canvas*=" resize_shift"],
+[off-canvas*=" bottom"][off-canvas*=" resize_reveal"],
+[off-canvas*=" bottom"][off-canvas*=" resize_shift"] {
 	z-index: 1;
 }
 
