--- a/slidebars/slidebars.css
+++ b/slidebars/slidebars.css
@@ -19,7 +19,7 @@
  * Box Model, Html & Body
  */
 
-html, body, [canvas=container], [off-canvas] {
+html, body, [data-canvas=container], [data-off-canvas] {
 	margin: 0;
 	padding: 0;
 	-webkit-box-sizing: border-box;
@@ -37,11 +37,11 @@ html, body {
  * Canvas
  */
 
-[canvas] {
+[data-canvas] {
 	z-index: 1;
 }
 
-[canvas=container] {
+[data-canvas=container] {
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
@@ -50,7 +50,7 @@ html, body {
 	-webkit-overflow-scrolling: touch; /* Enables momentum scrolling on iOS devices, may be removed by setting to 'auto' in your own CSS. */
 }
 
-[canvas=container]:before, [canvas=container]:after {
+[data-canvas=container]:before, [data-canvas=container]:after {
 	clear: both;
 	content: '';
 	display: table;
@@ -60,7 +60,7 @@ html, body {
  * Off-Canvas
  */
 
-[off-canvas] {
+[data-off-canvas] {
 	display: none;
 	position: fixed;
 	overflow: hidden;
@@ -70,45 +70,45 @@ html, body {
 	-webkit-overflow-scrolling: touch; /* Enables momentum scrolling on iOS devices, may be removed by setting to 'auto' in your own CSS. */
 }
 
-[off-canvas*=" top"] {
+[data-off-canvas*=" top"] {
 	width: 100%;
 	height: 255px;
 	top: 0;
 }
 
-[off-canvas*=" right"] {
+[data-off-canvas*=" right"] {
 	width: 255px;
 	height: 100%;
 	top: 0;
 	right: 0;
 }
 
-[off-canvas*=" bottom"] {
+[data-off-canvas*=" bottom"] {
 	width: 100%;
 	height: 255px;
 	bottom: 0;
 }
 
-[off-canvas*=" left"] {
+[data-off-canvas*=" left"] {
 	width: 255px;
 	height: 100%;
 	top: 0;
 	left: 0;
 }
 
-[off-canvas*=" reveal"] {
+[data-off-canvas*=" reveal"] {
 	z-index: 0;
 }
 
-[off-canvas*=" push"] {
+[data-off-canvas*=" push"] {
 	z-index: 1;
 }
 
-[off-canvas*=" overlay"] {
+[data-off-canvas*=" overlay"] {
 	z-index: 9999;
 }
 
-[off-canvas*=" shift"] {
+[data-off-canvas*=" shift"] {
 	z-index: 0;
 }
 
@@ -116,7 +116,7 @@ html, body {
  * Animation
  */
 
-[canvas], [off-canvas] {
+[data-canvas], [data-off-canvas] {
 	-webkit-transform: translate( 0px, 0px );
 	    -ms-transform: translate( 0px, 0px );
 	        transform: translate( 0px, 0px );
@@ -125,22 +125,22 @@ html, body {
 	-webkit-backface-visibility: hidden; /* Prevents flickering, may be removed if experiencing problems with fixed background images in Chrome. */
 }
 
-[off-canvas*=" shift"][off-canvas*=" top"] {
+[data-off-canvas*=" shift"][data-off-canvas*=" top"] {
 	-webkit-transform: translate( 0px, 50% );
 	        transform: translate( 0px, 50% );
 }
 
-[off-canvas*=" shift"][off-canvas*=" right"] {
+[data-off-canvas*=" shift"][data-off-canvas*=" right"] {
 	-webkit-transform: translate( -50%, 0px );
 	        transform: translate( -50%, 0px );
 }
 
-[off-canvas*=" shift"][off-canvas*=" bottom"] {
+[data-off-canvas*=" shift"][data-off-canvas*=" bottom"] {
 	-webkit-transform: translate( 0px, -50% );
 	        transform: translate( 0px, -50% );
 }
 
-[off-canvas*=" shift"][off-canvas*=" left"] {
+[data-off-canvas*=" shift"][data-off-canvas*=" left"] {
 	-webkit-transform: translate( 50%, 0px );
 	        transform: translate( 50%, 0px );
 }
@@ -150,13 +150,13 @@ html, body {
  */
 
 @media print {
-	[canvas] {
+	[data-canvas] {
 		-webkit-transform: translate( 0px, 0px ) !important;
 		    -ms-transform: translate( 0px, 0px ) !important;
 		        transform: translate( 0px, 0px ) !important;
 	}
 
-	[off-canvas] {
+	[data-off-canvas] {
 		display: none !important;
 	}
 }
