--- a/slidebars/slidebars.css
+++ b/slidebars/slidebars.css
@@ -10,9 +10,10 @@
  * Modified by: Jory Hogeveen
  * Version numbers below are related to Off-Canvas Sidebars, not Slidebars.
  *
- * @version  0.5.6
+ * @version  0.5.7
  * @since    0.4.0  Enhance location selectors, added quotes.
  * @since    0.5.6  Added filter transition to canvas container.
+ * @since    0.5.7  Data attributes.
  */
 
 /**
